--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  font-family: 'Inter', 'sans-serif';
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  font-size: 12px;
+  line-height: 15px;
+}
