--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@ body {
   font-size: 12px;
   line-height: 15px;
 }
+
+.ant-layout-header {
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(30px);
+}
